--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -9,5 +9,9 @@
     <PackageReference Include="RestSharp" Version="106.10.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KeycloakAuthz\KeycloakAuthz.csproj" />
+  </ItemGroup>
+
 
 </Project>
