--- a/src/ReactClient/package.json
+++ b/src/ReactClient/package.json
@@ -13,6 +13,7 @@
     "@react-keycloak/web": "^2.1.4",
     "clsx": "latest",
     "keycloak-js": "^11.0.2",
+    "nprogress": "^0.2.0",
     "react": "latest",
     "react-dom": "latest",
     "react-scripts": "latest"
